Made the close icon slightly smaller and fixed an issue with text overflow.

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -8,7 +8,7 @@
 @tab-border-color: #000;//@pane-border-color;
 @tab-border-width: 1px;//@pane-border-width;
 
-@close-icon-size: 16px;
+@close-icon-size: 13px;
 @close-icon-background-color: @primary-color;
 @close-icon-border-radius: 2px;
 
@@ -117,8 +117,8 @@
             border-radius: @close-icon-border-radius;
             background-color: transparent;
             background-repeat: no-repeat;
-            background-size: 10px 10px;
-            background-position: 3px 4px;
+            background-size: 7px;
+            background-position: 3px 3px;
             background-image: url('via://tabs/images/close.svg');
             transform: scale(0);
             transition: transform ease 0.1s;
